--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/urbanist_bold"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:layout_marginTop="18dp"
         android:layout_marginLeft="2dp"
         android:textColor="#1E232C"
@@ -28,7 +28,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist_medium"
-        android:text="Don't worry! It occurs. Please enter the email address linked with your account."
+        android:text="@string/don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account"
         android:textColor="#1E232C"
         android:textSize="28sp"
 
@@ -56,7 +56,7 @@
             android:background="@drawable/edittext_rounded"
             android:drawablePadding="8dp"
             android:fontFamily="@font/urbanist_bold"
-            android:hint="Enter your email"
+            android:hint="@string/enter_your_email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             android:textColor="@android:color/black"
@@ -83,7 +83,7 @@
             android:visibility="gone"
             android:textColor="#ff0000"
             android:layout_marginTop="16dp"
-            android:text="Remember Password? Login"
+            android:text="@string/remember_password_login"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/tvRegisterLink"
