--- a/app/src/main/res/layout/activity_otpverification.xml
+++ b/app/src/main/res/layout/activity_otpverification.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/tv_welcome"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/urbanist_bold"
         android:text="@string/otp_verification"
@@ -99,7 +99,7 @@
         android:background="@drawable/shape_rounded"
         android:fontFamily="@font/urbanist_bold"
         android:onClick="onClickToLogin"
-        android:text="Verify"
+        android:text="@string/verify"
         android:textAllCaps="false"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Didn't received code? Resend"
+        android:text="@string/didn_t_received_code_resend"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
