--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -23,35 +23,35 @@
         tools:layout_editor_absoluteX="16dp"
         android:layout_marginTop="55dp"/>
 
-    <ScrollView
+    <TextView
+        android:id="@+id/tv_welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/urbanist_bold"
+        android:text="@string/welcome_aboard_we_re_thrilled_to_have_you_join_us"
+        android:textColor="#1E232C"
+        android:textSize="35sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:padding="20dp"
         android:paddingTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_welcome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
 
-                android:fontFamily="@font/urbanist_bold"
-                android:text="Welcome aboard! We’re thrilled to have you join us!"
-                android:textColor="#1E232C"
-                android:textSize="50sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageButton" />
             <!-- Поле для ввода email -->
             <EditText
                 android:id="@+id/etEmail"
@@ -61,7 +61,7 @@
                 android:background="@drawable/edittext_rounded"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/urbanist_bold"
-                android:hint="Enter your email"
+                android:hint="@string/enter_your_email"
                 android:layout_marginTop="40dp"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/black"
@@ -82,7 +82,7 @@
                     android:background="@drawable/edittext_rounded"
                     android:drawablePadding="8dp"
                     android:fontFamily="@font/urbanist_bold"
-                    android:hint="Enter your password"
+                    android:hint="@string/enter_your_password"
                     android:inputType="textPassword"
                     android:paddingEnd="48dp"
                     android:textColor="@android:color/black"
@@ -112,7 +112,7 @@
                     android:background="@drawable/edittext_rounded"
                     android:drawablePadding="8dp"
                     android:fontFamily="@font/urbanist_bold"
-                    android:hint="Confirm your password"
+                    android:hint="@string/confirm_your_password"
                     android:inputType="textPassword"
                     android:paddingEnd="48dp"
                     android:textColor="@android:color/black"
@@ -139,7 +139,7 @@
                 android:background="@drawable/edittext_rounded"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/urbanist_bold"
-                android:hint="Enter your Name"
+                android:hint="@string/enter_your_name"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/black"
                 android:textColorHint="#FF9E9E9E"
@@ -153,7 +153,7 @@
                 android:background="@drawable/edittext_rounded"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/urbanist_bold"
-                android:hint="+7 (777) 777-7777"
+                android:hint="@string/_7_777_777_7777"
                 android:inputType="phone"
                 android:textColor="@android:color/black"
                 android:textColorHint="#FF9E9E9E"
@@ -165,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="HELLO"
+                android:text="@string/hello"
                 android:textColor="#FF0000"
                 android:visibility="gone"
                 android:textSize="16sp"
@@ -186,21 +186,22 @@
                 android:textColor="@android:color/white"
                 tools:ignore="OnClick" />
 
+            <TextView
+                android:id="@+id/tvRegisterLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/you_already_have_an_account_log_in_now"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"/>
         </LinearLayout>
 
     </ScrollView>
 
-    <TextView
-        android:id="@+id/tvRegisterLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/you_already_have_an_account_log_in_now"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="20dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
