--- a/app/src/main/res/layout/fragment_edit_password_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_password_bottom_sheet.xml
@@ -1,54 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ResetPassword">
-
-    <TextView
-        android:id="@+id/tv_welcome"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="40dp"
+    >
+    <!-- Текст с заголовком -->
+        <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/change_password"
         android:fontFamily="@font/urbanist_bold"
-        android:text="@string/create_new_password"
-        android:layout_marginTop="18dp"
-        android:textColor="#1E232C"
-        android:textSize="35sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
-
-    <TextView
-        android:id="@+id/tv_warning"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/urbanist_medium"
-        android:text="@string/your_new_password_must_be_unique_from_those_previously_used"
-        android:textColor="#1E232C"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.395"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
-
-    <LinearLayout
-        android:id="@+id/layoutContent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
+        android:textSize="30sp"
+        android:padding="8dp"
+        android:textAlignment="center"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
 
             <!-- Поле ввода пароля -->
             <EditText
@@ -58,7 +29,7 @@
                 android:background="@drawable/edittext_rounded"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/urbanist_bold"
-                android:hint="@string/enter_your_password"
+                android:hint="@string/enter_new_password"
                 android:inputType="textPassword"
                 android:paddingEnd="48dp"
                 android:textColor="@android:color/black"
@@ -89,7 +60,7 @@
                 android:background="@drawable/edittext_rounded"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/urbanist_bold"
-                android:hint="@string/confirm_your_password"
+                android:hint="@string/confirm_new_password"
                 android:inputType="textPassword"
                 android:paddingEnd="48dp"
                 android:textColor="@android:color/black"
@@ -118,21 +89,6 @@
             android:text="@string/reset_password"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            tools:ignore="OnClick" />
+            />
 
-
-    </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:onClick="onClickToReturnWelcome"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_return_back"
-        tools:ignore="MissingConstraints,OnClick"
-        tools:layout_editor_absoluteX="16dp"
-        android:layout_marginTop="55dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
