--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,7 +10,9 @@
         android:name="kz.olzhass.kolesa.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home"
-        />
+        >
+
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_calendar"
@@ -18,17 +20,41 @@
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_calendar" >
 
+
     </fragment>
 
     <fragment
         android:id="@+id/navigation_doctors"
         android:name="kz.olzhass.kolesa.ui.doctors.DoctorsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_doctors" />
+        tools:layout="@layout/fragment_doctors">
+
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="kz.olzhass.kolesa.ui.profile.ProfileFragment"
         android:label="Profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_profileFragment_to_settingsFragment"
+            app:destination="@id/navigation_settings" />
+        <action
+            android:id="@+id/action_profileFragment_to_calendarFragment"
+            app:destination="@+id/navigation_calendar"
+            app:popUpTo="@id/navigation_profile"
+            app:popUpToInclusive="true"/>
+
+
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="kz.olzhass.kolesa.ui.settings.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_settings" />
+    <action
+        android:id="@+id/action_settingsFragment_to_profileFragment"
+        app:destination="@id/navigation_profile" />
 </navigation>
