--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="selectedColor">#2A7FBA</color>
+    <color name="unselectedTextColor">#2A7FBA</color>
+    <color name="background_color">#FFFFFF</color>
+    <color name="for_doctor_card">#1C665E</color>
+    <color name="holo_blue_dark">#2A7FBA</color>
+    <color name="gray_for_background">#F0F3F5</color>
 
 </resources>
