--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,5 +45,37 @@
         <item name="cornerSizeBottomRight">0dp</item>
     </style>
 
+    <style name="RoundedTabLayoutStyle" parent="Widget.Design.TabLayout">
+        <!-- Отключаем стандартный индикатор (линию под вкладкой) -->
+        <item name="tabIndicator">@null</item>
+
+        <!-- Если нужно закруглить сам фон TabLayout -->
+        <item name="android:background">@drawable/tab_layout_bg</item>
+
+        <!-- Задаём фоновый drawable для каждой вкладки (наш selector) -->
+        <item name="tabBackground">@drawable/tabs_selector</item>
+
+        <!-- Цвет текста для выбранной вкладки (белый) -->
+        <item name="tabSelectedTextColor">@color/white</item>
+
+        <!-- Цвет текста для невыбранных вкладок -->
+        <item name="tabTextColor">@color/unselectedTextColor</item>
+
+        <!-- При желании можно добавить отступы внутри вкладки -->
+        <!--
+        <item name="tabPaddingStart">16dp</item>
+        <item name="tabPaddingEnd">16dp</item>
+        -->
+    </style>
+
+    <style name="CustomSearchViewStyle">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:queryHint">Search doctors</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+
+
 </resources>
 
