--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.calendar.CalendarFragment" >
+    tools:context=".ui.calendar.CalendarFragment"
+    android:layout_marginBottom="56dp">
 
     <TextView
         android:id="@+id/tv_welcome"
