--- a/app/src/main/res/layout/fragment_doctors.xml
+++ b/app/src/main/res/layout/fragment_doctors.xml
@@ -5,16 +5,18 @@
     android:id="@+id/fragmentTabsRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginBottom="56dp">
 
     <!-- Вкладки (TabLayout) -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
+        style="@style/RoundedTabLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabIndicatorColor="@android:color/holo_blue_light"
-        app:tabSelectedTextColor="@android:color/holo_blue_dark"
-        app:tabTextColor="@android:color/darker_gray" />
+        android:layout_margin="16dp"
+        android:background="?android:attr/windowBackground"
+        />
 
     <!-- Область переключаемого содержимого (ViewPager2) -->
     <androidx.viewpager2.widget.ViewPager2
