--- a/app/src/main/res/layout/fragment_doctors_by_specialty.xml
+++ b/app/src/main/res/layout/fragment_doctors_by_specialty.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".AllSpecialtiesFragment">
+    tools:context=".DoctorsBySpecialtyFragment">
 
-    <!-- RecyclerView для отображения списка специальностей -->
+    <!-- RecyclerView для отображения списка врачей -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewSpecialties"
+        android:id="@+id/recyclerViewDoctors"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
