--- a/app/src/main/res/layout/activity_otpverification.xml
+++ b/app/src/main/res/layout/activity_otpverification.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OTPVerification">
+    tools:context=".ui.resetpassword.OTPVerification">
 
     <TextView
         android:id="@+id/tv_welcome"
