--- a/app/src/main/res/layout/fragment_all_doctors.xml
+++ b/app/src/main/res/layout/fragment_all_doctors.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllDoctorsFragment"
+    tools:context=".ui.doctors.AllDoctorsFragment"
     android:background="@color/gray_for_background"
     android:orientation="vertical">
 
