--- a/app/src/main/res/layout/fragment_doctors.xml
+++ b/app/src/main/res/layout/fragment_doctors.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginBottom="56dp">
+    android:layout_marginBottom="56dp"
+    android:layout_marginTop="10dp">
 
     <!-- Вкладки (TabLayout) -->
     <com.google.android.material.tabs.TabLayout
@@ -22,6 +23,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"/>
 
 </LinearLayout>
