--- a/app/src/main/res/layout/fragment_doctors_by_specialty.xml
+++ b/app/src/main/res/layout/fragment_doctors_by_specialty.xml
@@ -5,20 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".DoctorsBySpecialtyFragment">
+    tools:context=".ui.doctors.DoctorsBySpecialtyFragment">
 
-    <!-- RecyclerView для отображения списка врачей -->
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:onClick="onClickToReturnWelcome"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_return_back"
+        tools:ignore="MissingConstraints,OnClick"
+        android:layout_marginTop="0dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDoctors"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
