--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,31 +9,43 @@
         android:id="@+id/navigation_home"
         android:name="kz.olzhass.kolesa.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home"
-        >
-
+        tools:layout="@layout/fragment_home">
     </fragment>
 
     <fragment
         android:id="@+id/navigation_calendar"
         android:name="kz.olzhass.kolesa.ui.calendar.CalendarFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_calendar" >
+        tools:layout="@layout/fragment_calendar">
+    </fragment>
 
-
+    <fragment
+        android:id="@+id/navigation_ai"
+        android:name="kz.olzhass.kolesa.ui.assistant.AiAssistant"
+        android:label=""
+        tools:layout="@layout/fragment_ai_assistant">
     </fragment>
 
     <fragment
         android:id="@+id/navigation_doctors"
         android:name="kz.olzhass.kolesa.ui.doctors.DoctorsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_doctors"
-        >
-
+        android:label="@string/doctors"
+        tools:layout="@layout/fragment_doctors">
+        <action
+            android:id="@+id/action_doctors_to_doctorsBySpecialty"
+            app:destination="@id/doctorsBySpecialtyFragment"
+            app:argType="integer" />
         <action
             android:id="@+id/action_allSpecialties_to_doctorsBySpecialty"
             app:destination="@id/doctorsBySpecialtyFragment"
-            app:argType="integer" />
+            app:argType="integer"
+            />
+        <action
+            android:id="@+id/action_allDoctorsFragment_to_appointmentFragment"
+            app:destination="@id/appointmentFragment"
+            app:argType="integer"
+            app:popUpTo="@id/allDoctorsFragment"
+            app:popUpToInclusive="true"/>
 
     </fragment>
 
@@ -50,32 +62,69 @@
             app:destination="@+id/navigation_calendar"
             app:popUpTo="@id/navigation_profile"
             app:popUpToInclusive="true"/>
-
-
-
+        <action
+            android:id="@+id/action_navigation_profile_to_documentsFragment"
+            app:destination="@id/documentsFragment"
+            app:popUpTo="@id/navigation_profile"
+            app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/doctorsBySpecialtyFragment"
-        android:name="kz.olzhass.kolesa.DoctorsBySpecialtyFragment"
+        android:name="kz.olzhass.kolesa.ui.doctors.DoctorsBySpecialtyFragment"
         android:label="Doctors By Specialty"
-        tools:layout="@layout/fragment_doctors_by_specialty"/>
+        tools:layout="@layout/fragment_doctors_by_specialty" />
 
+    <action
+        android:id="@+id/action_doctorsBySpecialty_to_appointmentFragment"
+        app:destination="@id/appointmentFragment"
+        app:argType="integer"
+        app:popUpTo="@id/doctorsBySpecialtyFragment"
+        app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/allSpecialtiesFragment"
-        android:name="kz.olzhass.kolesa.AllSpecialtiesFragment"
+        android:name="kz.olzhass.kolesa.ui.doctors.AllSpecialtiesFragment"
         android:label="All Specialties"
         tools:layout="@layout/fragment_specific_doctors">
-        <action
-            android:id="@+id/action_allSpecialties_to_doctorsBySpecialty"
-            app:destination="@id/doctorsBySpecialtyFragment"
-            app:argType="integer" />
     </fragment>
+
     <fragment
         android:id="@+id/navigation_settings"
         android:name="kz.olzhass.kolesa.ui.settings.SettingsFragment"
         android:label="Settings"
-        tools:layout="@layout/fragment_settings" />
-    <action
-        android:id="@+id/action_settingsFragment_to_profileFragment"
-        app:destination="@id/navigation_profile" />
+        tools:layout="@layout/fragment_settings">
+        <action
+            android:id="@+id/action_settingsFragment_to_profileFragment"
+            app:destination="@id/navigation_profile"
+            app:popUpTo="@id/navigation_profile"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/documentsFragment"
+        android:name="kz.olzhass.kolesa.ui.documents.Documents"
+        android:label="Documents"
+        tools:layout="@layout/fragment_documents">
+        <action
+            android:id="@+id/action_documentsFragment_to_profileFragment"
+            app:destination="@id/navigation_profile"
+            app:popUpTo="@id/navigation_profile"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/appointmentFragment"
+        android:name="kz.olzhass.kolesa.ui.appointment.AppointmentFragment"
+        android:label="Appointment"
+        tools:layout="@layout/fragment_appointment">
+    </fragment>
+
+    <fragment
+        android:id="@+id/allDoctorsFragment"
+        android:name="kz.olzhass.kolesa.ui.doctors.AllDoctorsFragment"
+        android:label="All Doctors"
+        tools:layout="@layout/fragment_all_doctors">
+
+    </fragment>
+
 </navigation>
