--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_hospital_current"
-        android:title="@string/title_home"/>
+        android:title="@string/documents"/>
 
     <item
         android:id="@+id/navigation_calendar"
