--- a/app/src/main/res/layout/item_previous_appointment.xml
+++ b/app/src/main/res/layout/item_previous_appointment.xml
@@ -1,4 +1,3 @@
-<!-- item_appointment.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,10 +14,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="center_vertical"> <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <!-- Имя доктора -->
         <TextView
             android:id="@+id/tvDoctorName"
             android:layout_width="wrap_content"
@@ -29,8 +32,6 @@
             android:textColor="@color/for_doctor_card"
             android:fontFamily="@font/montserrat_semibold" />
 
-
-
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
@@ -40,7 +41,6 @@
             android:textColor="@android:color/black"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/montserrat_medium" />
-
 
         <TextView
             android:id="@+id/tvTime"
@@ -91,8 +91,15 @@
             android:layout_marginTop="4dp"
             android:fontFamily="@font/montserrat_medium" />
 
+    </LinearLayout>
+
+        <ImageView
+            android:id="@+id/btn_trash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_gravity="center_vertical|end" android:src="@drawable/ic_trash" />
 
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
-
