--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -54,10 +54,9 @@
             android:id="@+id/documentPreview"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-
             android:layout_marginTop="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_hospital" />
+            android:scaleType="centerCrop" />
+
         <TextView
             android:id="@+id/tvDocumentDate"
             android:layout_width="wrap_content"
@@ -69,6 +68,19 @@
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/urbanist_medium"
             app:layout_constraintTop_toBottomOf="@id/tvDocumentType" />
+
+        <Button
+            android:id="@+id/btnDownload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:padding="10dp"
+            android:text="@string/download"
+            android:textColor="@android:color/white" />
+
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
